# bursai

./: .claudeignore  .env  .env.example  .gitignore  AGENTS.md  CLAUDE.md  LAUNCH_PLAN.md  README.md  REVERT-4e249b7.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts  vitest.smoke.config.ts
.claude/: launch.json  settings.local.json
.claude/mockups/: index.html
.github/workflows/: ci.yml  mobile-ci.yml
.husky/: pre-commit
.lovable/: plan.md
design_handoff_burs_rn/: README.md  tokens.ts
design_handoff_burs_rn/source/: Burs iPhone Mockup.html  audit-screens.jsx  extra-screens.jsx  more-screens.jsx  router.jsx  screens.jsx  styles.css
docs/: ARCHITECTURE.md  MEDIAN_QA_CHECKLIST.md  V4_SCREEN_IDS.md  VERTEX_MIGRATION_PLAN.md  baseline.md  burs-frontend-rebuild-audit.md
docs/launch/: cdn-strategy.md  completion-log.md  findings-log.md  g-campaign.md  launch-checklist.md  load-test-2026-05-results.md  mobile-launch-fix-plan-2026-05-31.md  mobile-launch-overview.md  mobile-w0-sentry.md  mobile-w1-destructive-mutations.md  mobile-w11-inbox-share.md  mobile-w13-testflight.md  mobile-w4-style-dna.md  mobile-w5-push.md  mobile-w8-appjson.md  observability-views.md  overview.md  session-workflow-patterns.md  sse-keepalive-audit-2026-05-18.md  standing-rules.md  wave-4.5-secondary-image.md  wave-6-localization.md  wave-8-subscriptions.md  wave-8.5-p82-audit.md  wave-8.5-pr-b-integration-design.md  wave-8.5-style-memory.md  wave-9-capacitor.md  wave-r-a1-preflight-findings.md  wave-r-implementation-plan.md
docs/modularization/: 2026-05-16-burs-modularization-phase-0-style-engine-variety-design.md  2026-05-16-burs-modularization-phase-1-state-foundations-design.md  2026-05-16-burs-modularization-phase-2-stylist-hooks-design.md  2026-05-16-burs-modularization-phase-3-screen-splits-design.md  2026-05-16-burs-modularization-phase-4-types-and-batch-design.md  2026-05-16-burs-modularization-phase-5-edge-functions-design.md  2026-05-16-burs-modularization-phase-6-addpiece-design.md  2026-05-16-burs-modularization-roadmap.md  2026-05-16-modularization-COMPLETION.md  2026-05-17-burs-modularization-phase-5d-burs-style-engine-deep-extraction-design.md  2026-05-17-burs-modularization-phase-5e-render-garment-state-design.md  2026-05-17-edit-garment-screen-picker-visibility-design.md
e2e/: onboarding-flow.spec.ts  outfit-generate.spec.ts  wardrobe-scroll.spec.ts
mobile/: .easignore  .env.example  .gitignore  App.tsx  CLAUDE.md  app.json  eas.json  eslint.config.js  google-services.json  jest.config.js  jest.setup.ts  nitro.json  package-lock.json  package.json  tsconfig.json
mobile/plugins/with-garment-detector/android/: CMakeLists.txt  GarmentDetectorPackage.kt  HybridGarmentDetector.kt  cpp-adapter.cpp  placeholder.cpp
mobile/plugins/with-garment-detector/android/com/margelo/nitro/burs/: HybridGarmentDetector.kt
mobile/plugins/with-garment-detector/android/me/burs/app/livescan/: GarmentDetectorPackage.kt
mobile/scripts/: check-firebase-config.js  generate-app-icons.js  generate-placeholder-icons.js  translate-locales.mjs
mobile/specs/: GarmentDetector.nitro.ts
public/: landing.html  manifest.json  robots.txt  sitemap.xml  sw.js
public/privacy/: index.html
public/terms/: index.html
scripts/: check-loc.ts  i18n-diff.mjs  launch-readiness.mjs  translations_ar.json  translations_ar_2.json  translations_ar_3.json  translations_ar_4.json  translations_ar_5.json  translations_fa.json  verify-migrations.sh
src/: App.tsx  index.css  main.tsx
src/components/: LinkImportForm.tsx  PaywallModal.tsx  PremiumSection.tsx
src/config/: constants.ts  marketing.ts
src/contexts/: AuthContext.tsx  LanguageContext.tsx  LocationContext.tsx  SeedContext.tsx  ThemeContext.tsx
src/data/: seedGarments.ts
src/hooks/: useAISuggestions.ts  useAddGarment.ts  useAdvancedFeatures.ts  useAdvancedInsights.ts  useAnalyzeGarment.ts  useAutoDetect.ts  useAvatarUrl.ts  useCalendarSync.ts  useDaySummary.ts  useDeepLink.ts  useDuplicateDetection.ts  useFeedbackSignals.ts  useFirstRunCoach.ts  useFlatlay.ts  useForecast.ts  useGarmentOutfitHistory.ts  useGarments.ts  useGarmentsByIds.ts  useInsights.ts  useInsightsDashboard.ts  useIsAdmin.ts  useIsDark.ts  useKeyboardAdjust.ts  useLaundryCycle.ts  useLiveScan.ts  useLocationSuggestions.ts  useMedianCamera.ts  useMedianStatusBar.ts  useOfflineQueue.ts  useOnboarding.ts  useOutfitGenerator.ts  useOutfits.ts  usePhotoFeedback.ts  usePlannedOutfits.ts  useProfile.ts  usePushNotifications.ts  useRefineMode.ts  useRenderJobStatus.ts  useScrollReveal.ts  useSignedUrlCache.ts  (+15 more)
src/i18n/: translations.ts  types.ts
src/lib/: advanceOnboardingStep.ts  analytics.ts  appUrl.ts  backgroundGarmentSave.ts  buildGarmentInsert.ts  buildTodaySuggestions.ts  bulkAddLimits.ts  chatActiveLook.ts  chatStream.ts  completeOutfitIds.ts  compressFrame.ts  dateFnsLocale.ts  dateLocale.ts  edgeFunctionClient.ts  externalNavigation.ts  finalizeCandidate.ts  garmentImage.ts  garmentImagePath.ts  garmentIntelligence.ts  garmentTokens.ts  haptics.ts  humanize.ts  i18nFallback.ts  imageCompression.ts  incrementOnboardingGarmentCount.ts  localizedPricing.ts  logger.ts  mannequinPresentation.ts  marketingAnalytics.ts  median.ts  memoryEventQueue.ts  memoryEvents.ts  motion.ts  nativeShare.ts  occasionLabel.ts  offlineQueue.ts  outfitAnchoring.ts  outfitContext.ts  outfitGenerationErrors.ts  outfitMetadataCache.ts  (+18 more)
src/pages/: AIChat.tsx  AddGarment.tsx  Auth.tsx  BillingCancel.tsx  BillingSuccess.tsx  Discover.tsx  EditGarment.tsx  GarmentDetail.tsx  GarmentGaps.tsx  GoogleCalendarCallback.tsx  Home.tsx  Index.tsx  Insights.tsx  InspirationFeed.tsx  Landing.tsx  LiveScan.tsx  MoodOutfit.tsx  NotFound.tsx  Onboarding.tsx  OutfitDetail.tsx  OutfitGenerate.tsx  Outfits.tsx  PickMustHaves.tsx  Plan.tsx  Pricing.tsx  PublicProfile.tsx  ResetPassword.tsx  Settings.tsx  ShareOutfit.tsx  SmartShopping.tsx  StyleChallenges.tsx  StyleMe.tsx  (+8 more)
supabase/: config.toml  types.gen.ts
(+1401 files in other folders)
